--- a/Module3/Module3/Module3/Module3.vcxproj
+++ b/Module3/Module3/Module3/Module3.vcxproj
@@ -143,6 +143,9 @@
     <ClCompile Include="..\libs\MathCalcLib.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\libs\MathCalcLib.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
