--- a/Module3/Module3/Module3/Module3.vcxproj.filters
+++ b/Module3/Module3/Module3/Module3.vcxproj.filters
@@ -22,4 +22,9 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\libs\MathCalcLib.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
