--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,27 @@
 Module2/module2/.vs/
 Module3/Module3/.vs/
+Module10/AnimalFarm/.vs/*
+Module10/AnimalFarm/AnimalFarm/Debug/*
+Module10/AnimalFarm/Debug/AnimalFarm.exe
+Module10/AnimalFarm/Debug/AnimalFarm.pdb
+Module9/Matrix/.vs/Matrix/v16/.suo
+Module9/Matrix/.vs/Matrix/v16/Browse.VC.db
+Module9/Matrix/.vs/Matrix/v16/ipch/AutoPCH/e652d5d3ed5c7828/MAIN.ipch
+Module9/Matrix/.vs/Matrix/v16/ipch/AutoPCH/f075d21979734134/MATRIX.ipch
+Module9/Matrix/Debug/Matrix.exe
+Module9/Matrix/Debug/Matrix.pdb
+Module9/Matrix/Matrix/Debug/main.obj
+Module9/Matrix/Matrix/Debug/Matrix.exe.recipe
+Module9/Matrix/Matrix/Debug/Matrix.ilk
+Module9/Matrix/Matrix/Debug/Matrix.log
+Module9/Matrix/Matrix/Debug/Matrix.obj
+Module9/Matrix/Matrix/Debug/matrix.obj.enc
+Module9/Matrix/Matrix/Debug/vc142.idb
+Module9/Matrix/Matrix/Debug/vc142.pdb
+Module9/Matrix/Matrix/Debug/Matrix.tlog/CL.command.1.tlog
+Module9/Matrix/Matrix/Debug/Matrix.tlog/CL.read.1.tlog
+Module9/Matrix/Matrix/Debug/Matrix.tlog/CL.write.1.tlog
+Module9/Matrix/Matrix/Debug/Matrix.tlog/link.command.1.tlog
+Module9/Matrix/Matrix/Debug/Matrix.tlog/link.read.1.tlog
+Module9/Matrix/Matrix/Debug/Matrix.tlog/link.write.1.tlog
+Module9/Matrix/Matrix/Debug/Matrix.tlog/Matrix.lastbuildstate
